component Button improvements

--- a/apps/storybook/stories/components/Button.mdx
+++ b/apps/storybook/stories/components/Button.mdx
@@ -1,19 +1,23 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
-import { Secondary, Test } from "./Button.stories.tsx";
+import { Shapes, Sizes, States, Variants } from "./Button.stories.tsx";
 
 
 <Meta title="Components/Button" />
 
 Documentation pour les boutons
 
-<Canvas>
-<p>Hello world</p>
-</Canvas>
+# Shapes
 
-<Canvas>
-<Story of={Secondary} />
-</Canvas>
+<Story of={Shapes} />
 
-<Canvas>
-<Story of={Test} />
-</Canvas>
+# Sizes
+
+<Story of={Sizes} />
+
+# States
+
+<Story of={States} />
+
+# Variants
+
+<Story of={Variants} />
