--- a/apps/storybook/stories/components/Button.mdx
+++ b/apps/storybook/stories/components/Button.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
-import { Shapes, Sizes, States, Variants } from "./Button.stories.tsx";
+import { Shapes, Sizes, States, Variants, Icons } from "./Button.stories.tsx";
 
 
 <Meta title="Components/Button" />
@@ -17,6 +17,10 @@ Documentation pour les boutons
 # States
 
 <Story of={States} />
+
+# Icons
+
+<Story of={Icons} />
 
 # Variants
 
