--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -14,6 +14,9 @@
   "altitude": "Altitude",
   "time": "Temps",
   "distance": "Distance",
+  "duration": "Durée",
+  "ascent": "Dénivelé positif",
+  "descent": "Dénivelé négatif",
   "compute": "Calculer",
   "abort": "Annuler",
   "addPoint": "Ajouter un point",
@@ -28,15 +31,20 @@
     "title": "Passages autorisés",
     "highway": "Autoroute",
     "bridge": "Pont",
-    "tunnel": "Tunnel"
+    "tunnel": "Tunnel",
+    "tollway": "Sections à péage",
+    "border": "Frontières"
   },
   "profile": {
     "car": "Voiture",
-    "pedestrian": "Piéton"
+    "pedestrian": "Piéton",
+    "bike": "Cycliste"
   },
   "optimization": {
+    "title": "Mode de calcul",
     "fastest": "Le plus rapide",
-    "shortest": "Le plus court"
+    "shortest": "Le plus court",
+    "recommended": "Recommandé"
   },
   "tooltip": {
     "direction": "Calculer un itinéraire vers ce point",
