touch devices improvements and pwa

--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -27,8 +27,8 @@
     "isochrone": "Isochrone",
     "isodistance": "Isodistance"
   },
-  "permissions": {
-    "title": "Passages autorisés",
+  "avoid": {
+    "title": "Éviter",
     "highway": "Autoroute",
     "bridge": "Pont",
     "tunnel": "Tunnel",
