--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -4,6 +4,17 @@
     "c2c": "Rechercher un sommet, un col...",
     "nominatim": "Rechercher un lieu dans le monde"
   },
+  "searchEngine": {
+    "ign-address": {
+      "label": "Adresse en France"
+    },
+    "c2c": {
+      "label": "Sommet, Col, Refuge"
+    },
+    "nominatim": {
+      "label": "Adresse dans le monde"
+    }
+  },
   "coordsUnit": {
     "lonlat": "lon/lat",
     "latlon": "lat/lon",
@@ -20,6 +31,7 @@
   "compute": "Calculer",
   "abort": "Annuler",
   "addPoint": "Ajouter un point",
+  "reset": "Réinitialiser",
   "isochrone": {
     "description": "Permet de déterminer l’ensemble des lieux que l’on peut atteindre depuis un point de départ pour atteindre un point d’arrivée en un temps ou une distance donné(e).",
     "profile": "Mode de transport",
