front search feature contextual marker icon

--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -1,4 +1,35 @@
 {
+  "featureType": {
+    "housenumber": "Point",
+    "street": "Rue",
+    "locality": "Lieu-dit",
+    "municipality": "Ville",
+    "access": "Accès",
+    "base_camp": "Camp",
+    "bisse": "Bisse",
+    "bivouac": "Bivouac",
+    "camp_site": "Camping",
+    "canyon": "Canyon",
+    "cave": "Grotte",
+    "climbing_indoor": "S.A.E.",
+    "climbing_outdoor": "Escalade",
+    "gite": "Gite",
+    "hut": "Refuge",
+    "lake": "Lac",
+    "local_product": "Produits",
+    "misc": "Divers",
+    "paragliding_landing": "Parapente",
+    "paragliding_takeoff": "Parapente",
+    "pass": "Col",
+    "shelter": "Abri",
+    "slackline_spot": "Slackline",
+    "summit": "Sommet",
+    "virtual": "Virtuel",
+    "waterfall": "Cascade",
+    "waterpoint": "Eau",
+    "weather_station": "Météo",
+    "webcam": "Webcam"
+  },
   "searchPlaceholder": {
     "ign-address": "Rechercher un lieu en France",
     "c2c": "Rechercher un sommet, un col...",
