fix mapFlyer with other country fitBound

--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -1,4 +1,9 @@
 {
+  "countries": {
+    "fr": "France",
+    "ch": "Suisse",
+    "world": "Monde"
+  },
   "featureType": {
     "housenumber": "Point",
     "street": "Rue",
