front basic geolocation implementation for search tab

--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -9,6 +9,7 @@
     "postcode": "Code postal",
     "citycode": "Code INSEE"
   },
+  "myGeolocation": "Ma position",
   "featureType": {
     "housenumber": "Point",
     "street": "Rue",
