add coords searchEngine

--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -45,7 +45,8 @@
     "waterfall": "Cascade",
     "waterpoint": "Eau",
     "weather_station": "Météo",
-    "webcam": "Webcam"
+    "webcam": "Webcam",
+    "lonlat": "GPS"
   },
   "searchEngine": {
     "ign-address": {
