front remove isochrone dependency to search tab

--- a/apps/front/src/i18n/fr.json
+++ b/apps/front/src/i18n/fr.json
@@ -6,6 +6,7 @@
     "ch": "Suisse",
     "world": "Monde"
   },
+  "close": "Fermer",
   "version": "Version",
   "sourceCode": "Code source",
   "submitIssue": "Rapporter une anomalie",
