mrc useControl refactorisation and documentation

--- a/apps/mrc-doc/src/app/reference/usercontrol/page.mdx
+++ b/apps/mrc-doc/src/app/reference/usercontrol/page.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
   title: 'useRControl',
-  description: 'hook to add React Control inside MapLibre'
+  description: 'hook to add React Control inside RMap'
 };
 
 # useRControl
