pentatrion-theme add scoped exports

--- a/apps/mrc-doc/src/app/(with-menu)/components/rmap/page.mdx
+++ b/apps/mrc-doc/src/app/(with-menu)/components/rmap/page.mdx
@@ -22,7 +22,7 @@ import helloWorldHtml from "./HelloWorld.tsx?shiki";
 
 <TwoCols first={<ShikiContent html={helloWorldHtml} />} second={<HelloWorld />} />
 
-Internally your style prop is wrap inside a `useMemo`, you can therefore define this object online without affecting performance
+Internally your style prop is wrap inside a `useMemo`, you can therefore define this object inline without affecting performance
 
 ```ts
 // extract of source code : /src/components/RMap/RMap.tsx
