--- a/apps/mrc-doc/src/app/(with-menu)/getting-started/page.mdx
+++ b/apps/mrc-doc/src/app/(with-menu)/getting-started/page.mdx
@@ -43,7 +43,7 @@ npm install maplibre-theme
 And use his `modern` style.
 
 ```tsx
-import "maplibre-theme/dist/modern.css";
+import "maplibre-theme/modern.css";
 ```
 
 ## Compatibility
